templates_sop/nested-stack/security-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC + Backend + Aurora Security Groups example"

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: "VPC where resources will be created"
  AppName:                      
    Type: String
  Environment:                  
    Type: String

Resources:
  
  # Security Group for EC2 (allow SSH and app port 8080)
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AppName}-${Environment}-ec2-sg"
      GroupDescription: Allow SSH and app port 8080
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:                               
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-ec2-sg"
        - Key: Application
          Value: !Ref AppName
        - Key: Environment
          Value: !Ref Environment

  # Security Group for ALB (allow HTTP from anywhere)
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AppName}-${Environment}-alb-sg" 
      GroupDescription: Allow HTTP to ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:                               
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-alb-sg"
        - Key: Application
          Value: !Ref AppName
        - Key: Environment
          Value: !Ref Environment

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AppName}-${Environment}-db-sg" 
      GroupDescription: "Aurora DB SG"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:                               
        - Key: Name
          Value: !Sub "${AppName}-${Environment}-db-sg"
        - Key: Application
          Value: !Ref AppName
        - Key: Environment
          Value: !Ref Environment

Outputs:
  EC2SecurityGroupId:
    Value: !Ref EC2SecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-Ec2SG"

  ALBSecurityGroupId:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-ALBSG"

  DBSecurityGroupId:
    Value: !Ref DBSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-DBSG"
